--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "express": "3.5.0",
     "hjs": "*",
-    "less-middleware": "*"
+    "less-middleware": "*",
+    "recursive-readdir": "^1.2.1"
   }
 }
