--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Mostly professional things about me",
   "main": "app.js",
   "scripts": {
-    "test": "test"
+    "start": "node app.js"
+  },
+  "engines": {
+    "node": "0.10.x"
   },
   "repository": {
     "type": "git",
