--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "express": "3.5.0",
+    "flickrapi": "^0.3.28",
     "hjs": "*",
     "less-middleware": "*",
     "lodash": "^2.4.1",
