--- a/package.json
+++ b/package.json
@@ -28,22 +28,25 @@
     "grunt": "~0.4.5",
     "grunt-contrib-concat": ">=0.4.0",
     "grunt-contrib-connect": "^0.9.0",
+    "grunt-contrib-copy": ">=0.5.0",
     "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-less": "^0.12.0",
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-copy": ">=0.5.0",
-    "grunt-contrib-less": "^0.12.0",
     "grunt-contrib-watch": ">=0.6.1",
+    "grunt-shell": "^1.1.2",
     "grunt-wiredep": "^2.0.0",
     "load-grunt-tasks": ">=0.4.0",
     "time-grunt": ">=0.3.1"
   },
   "dependencies": {
+    "exam": "^0.2.4",
     "express": "3.5.0",
     "flickrapi": "^0.3.28",
     "hjs": "*",
     "less-middleware": "*",
     "lodash": "^2.4.1",
+    "log": "^1.4.0",
     "promise": "^6.1.0",
     "recursive-readdir": "^1.2.1"
   }
