--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 *.sublime-project
 *.sublime-workspace
 /node_modules/*
+.cache/*
+.grunt/*
+logs/*
 */icons/*
 *.jpg
 *.png
@@ -15,3 +18,6 @@ practice/*
 .idea/
 louisnk.com.iml
 lnk.psd
+_SpecRunner.html
+mockLog.log
+
