--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": ">=0.6.1",
+    "grunt-karma": "^0.10.1",
     "grunt-shell": "^1.1.2",
     "grunt-wiredep": "^2.0.0",
+    "karma": "^0.12.31",
     "load-grunt-tasks": ">=0.4.0",
     "time-grunt": ">=0.3.1"
   },
@@ -46,6 +48,11 @@
     "flickrapi": "^0.3.28",
     "grunt-contrib-jasmine": "^0.8.2",
     "hjs": "*",
+    "jasmine-core": "^2.2.0",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-firefox-launcher": "^0.1.4",
+    "karma-jasmine": "^0.3.5",
+    "karma-phantomjs-launcher": "^0.1.4",
     "less-middleware": "*",
     "lodash": "^2.4.1",
     "log": "^1.4.0",
