--- a/package.json
+++ b/package.json
@@ -27,14 +27,17 @@
     "angular-ui-router": "^0.2.11",
     "bower": ">=1.3.5",
     "grunt": "~0.4.5",
+    "grunt-concurrent": "^1.0.0",
     "grunt-contrib-concat": ">=0.4.0",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": ">=0.5.0",
+    "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-less": "^0.12.0",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": ">=0.6.1",
     "grunt-karma": "^0.10.1",
+    "grunt-nodemon": "^0.4.0",
     "grunt-shell": "^1.1.2",
     "karma": "^0.12.31",
     "load-grunt-tasks": ">=0.4.0",
