--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "grunt-shell": "^1.1.2",
     "karma": "^0.12.31",
     "load-grunt-tasks": ">=0.4.0",
-    "time-grunt": ">=0.3.1"
+    "time-grunt": ">=0.3.1",
+    "grunt-lesslint": "^1.1.14"
   },
   "dependencies": {
     "exam": "^0.2.4",
